--- a/app/views/static/index2.erb
+++ b/app/views/static/index2.erb
@@ -1,4 +1,39 @@
+<h2 class="text-center"><i class="fa fa-building"></i> THE BLOOMS </h2>
+<br/>
 <div class="row top_tiles">
+  <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+    <div class="tile-stats">
+      <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+      <div class="count">10</div>
+      <h3>Rooms Sold</h3>
+      <p>Number of rooms that are sold today</p>
+    </div>
+  </div>
+  <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+    <div class="tile-stats">
+      <div class="icon"><i class="fa fa-bar-chart-o"></i></div>
+      <div class="count">40</div>
+      <h3>Occupancy Rate</h3>
+      <p>Lorem ipsum psdea itgum rixt.</p>
+    </div>
+  </div>
+  <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+    <div class="tile-stats">
+      <div class="icon"><i class="fa fa-credit-card"></i></div>
+      <div class="count">40</div>
+      <h3>Check Ins</h3>
+      <p>Lorem ipsum psdea itgum rixt.</p>
+    </div>
+  </div>
+  <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+    <div class="tile-stats">
+      <div class="icon"><i class="fa fa-pie-chart"></i></div>
+      <div class="count">15,000</div>
+      <h3>Booking Value(INR)</h3>
+      <p>Lorem ipsum psdea itgum rixt.</p>
+    </div>
+  </div>
+  <!--
   <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
     <div class="tile-stats">
       <div class="icon"><i class="fa fa-caret-square-o-right"></i></div>
@@ -31,13 +66,14 @@
       <p>Lorem ipsum psdea itgum rixt.</p>
     </div>
   </div>
+  -->
 </div>
 
 <div class="row">
   <div class="col-md-12">
     <div class="x_panel">
       <div class="x_title">
-        <h2>Transaction Summary <small>Weekly progress</small></h2>
+        <h2>Average Booking Value <small>Weekly progress</small></h2>
         <div class="filter">
           <div id="reportrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
             <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
@@ -47,7 +83,7 @@
         <div class="clearfix"></div>
       </div>
       <div class="x_content">
-        <div class="col-md-9 col-sm-12 col-xs-12">
+        <div class="col-md-8 col-sm-12 col-xs-12">
           <div class="demo-container" style="height:280px">
             <div id="chart_plot_02" class="demo-placeholder"></div>
           </div>
@@ -74,9 +110,15 @@
               </span>
             </div>
           </div>
-
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+          <div class="row" style="text-align: center;">
+            <canvas class="canvasDoughnut" height="250" width="250" style="margin: 5px 10px 10px 50px"></canvas>
+            <h4 style="margin:0">OTA Shares</h4>
+          </div>
         </div>
 
+        <!--
         <div class="col-md-3 col-sm-12 col-xs-12">
           <div>
             <div class="x_title">
@@ -157,6 +199,7 @@
             </ul>
           </div>
         </div>
+        -->
 
       </div>
     </div>
@@ -165,6 +208,7 @@
 
 
 
+<!--
 <div class="row">
   <div class="col-md-12">
     <div class="x_panel">
@@ -450,3 +494,4 @@
     </div>
   </div>
 </div>
+-->
