--- a/app/views/layouts/shared/_leftnav.html.erb
+++ b/app/views/layouts/shared/_leftnav.html.erb
@@ -23,6 +23,28 @@
   <div class="menu_section">
     <h3>General</h3>
     <ul class="nav side-menu">
+      <li><a href="index2.html"><i class="fa fa-home"></i> Home </a></li>
+      <li><a><i class="fa fa-calendar"></i> Report <span class="fa fa-chevron-down"></span></a>
+        <ul class="nav child_menu">
+          <li><a href="#">Price Distribution</a></li>
+          <li><a href="#">Lead Time</a></li>
+          <li><a href="#">Average Booking Dynamic</a></li>
+          <li><a href="#">Booking Summary</a></li>
+        </ul>
+      </li>
+      <li><a><i class="fa fa-calculator"></i> Price Matrix <span class="fa fa-chevron-down"></span></a>
+        <ul class="nav child_menu">
+          <li><a href="#">Edit Matrix</a></li>
+          <li><a href="#">Edit Rates</a></li>
+          <li><a href="#">Edit Compset</a></li>
+        </ul>
+      </li>
+      <li><a href="#"><i class="fa fa-list-alt"></i> Change Log </a></li>
+      <li><a href="#"><i class="fa fa-pencil"></i> Price Editor </a></li>
+      <li><a href="#"><i class="fa fa-address-book"></i> Bookings </a></li>
+      <li><a href="#"><i class="fa fa-usd"></i> Parity </a></li>
+      <li><a href="#"><i class="fa fa-phone"></i> Support </a></li>
+      <!--
       <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
         <ul class="nav child_menu">
           <li><a href="index.html">Dashboard</a></li>
@@ -116,6 +138,7 @@
         </ul>
           </li>
           <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
+      -->
     </ul>
   </div>
 
