--- a/app/views/layouts/shared/_topnav.html.erb
+++ b/app/views/layouts/shared/_topnav.html.erb
@@ -85,4 +85,143 @@
       </li>
     </ul>
   </li>
+  <li role="presentation" class="dropdown">
+    <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
+      Broad Bean Resorts & Spa ( Munnar ) ( Bathtub Villa ) <span class=" fa fa-angle-down"></span>
+    </a>
+    <ul id="menu1" class="dropdown-menu list-unstyled hotel_list" role="menu">
+      <div class="hotel-box-flex">
+        <div class="hotel-items">
+          <div class="x_panel tile">
+            <div class="x_title">
+              <h6>Broad Bean Resorts & Spa  (  Munnar  )</h6>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <div class="dashboard-widget-content">
+                <ul class="hotel-list">
+                  <li><a href="#">Bathtub Villa</a></li>
+                  <li><a href="#">Deluxe cottage</a></li>
+                  <li><a href="#">Executive Room</a></li>
+                  <li><a href="#">Honeymoon Suite</a></li>
+                  <li><a href="#">Jacuzzi Villa</a></li>
+                  <li><a href="#">Premium Suite</a></li>
+                  <li><a href="#">Private Pool Villa</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="hotel-items">
+          <div class="x_panel tile">
+            <div class="x_title">
+              <h6>Casino Houseboat  (  Alleppey  )</h6>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <div class="dashboard-widget-content">
+                <ul class="hotel-list">
+                  <li><a href="#">Deluxe Double</a></li>
+                  <li><a href="#">Deluxe One Bedroom</a></li>
+                  <li><a href="#">Deluxe Three Bedroom</a></li>
+                  <li><a href="#">Deluxe Two Bedroom</a></li>
+                  <li><a href="#">Premium Room</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="hotel-items">
+          <div class="x_panel tile">
+            <div class="x_title">
+              <h6>Crescent Crest  (  Sriperumbudur  )</h6>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <div class="dashboard-widget-content">
+                <ul class="hotel-list">
+                  <li><a href="#">Deluxe Room</a></li>
+                  <li><a href="#">Standard Room</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="hotel-items">
+          <div class="x_panel tile">
+            <div class="x_title">
+              <h6>Crescent Inn Navallur  (  Chennai ) </h6>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <div class="dashboard-widget-content">
+                <ul class="hotel-list">
+                  <li><a href="#">Deluxe Double Room</a></li>
+                  <li><a href="#">Deluxe Suite Room</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="hotel-items">
+          <div class="x_panel tile">
+            <div class="x_title">
+              <h6>Devonshire Greens Leisure Hotel  (  Munnar  )</h6>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <div class="dashboard-widget-content">
+                <ul class="hotel-list">
+                  <li><a href="#">Suite Room</a></li>
+                  <li><a href="#">Sunrise View Premium Room</a></li>
+                  <li><a href="#">Valley View Premium Room</a></li>
+                  <li><a href="#">Valley View Room</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="hotel-items">
+          <div class="x_panel tile">
+            <div class="x_title">
+              <h6>First Inn Hotel  (  Perungudi  )</h6>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <div class="dashboard-widget-content">
+                <ul class="hotel-list">
+                  <li><a href="#">Deluxe Room</a></li>
+                  <li><a href="#">Executive Room</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="hotel-items">
+          <div class="x_panel tile">
+            <div class="x_title">
+              <h6>Hotel Blackforest  (  Munnar  )</h6>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <div class="dashboard-widget-content">
+                <ul class="hotel-list">
+                  <li><a href="#">Deluxe Forest View</a></li>
+                  <li><a href="#">Executive Valley View</a></li>
+                  <li><a href="#">Standard Room</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ul>
+  </li>
 </ul>
