price matrix tables

--- a/app/views/layouts/shared/_leftnav.html.erb
+++ b/app/views/layouts/shared/_leftnav.html.erb
@@ -34,8 +34,8 @@
       </li>
       <li><a><i class="fa fa-calculator"></i> Price Matrix <span class="fa fa-chevron-down"></span></a>
         <ul class="nav child_menu">
-          <li><a href="#">Edit Matrix</a></li>
-          <li><a href="#">Edit Rates</a></li>
+          <li><a href="tables.html">Edit Matrix</a></li>
+          <li><a href="edit_rates.html">Edit Rates</a></li>
           <li><a href="#">Edit Compset</a></li>
         </ul>
       </li>
