price editor page

--- a/app/views/layouts/shared/_leftnav.html.erb
+++ b/app/views/layouts/shared/_leftnav.html.erb
@@ -40,8 +40,9 @@
         </ul>
       </li>
       <li><a href="#"><i class="fa fa-list-alt"></i> Change Log </a></li>
-      <li><a href="#"><i class="fa fa-pencil"></i> Price Editor </a></li>
+      <li><a href="price_editor.html"><i class="fa fa-pencil"></i> Price Editor </a></li>
       <li><a href="#"><i class="fa fa-address-book"></i> Bookings </a></li>
+      <li><a href="room_setting.html"><i class="fa fa-cog"></i> Room Settings </a></li>
       <li><a href="#"><i class="fa fa-usd"></i> Parity </a></li>
       <li><a href="#"><i class="fa fa-phone"></i> Support </a></li>
       <!--
