--- a/app/views/static/tables.erb
+++ b/app/views/static/tables.erb
@@ -450,7 +450,7 @@
 -->
 <div class="x_content">
   <div class="table-responsive">
-    <table class="table table-striped jambo_table bulk_action">
+    <table class="table table-striped jambo_table">
       <thead>
         <tr class="headings">
           <th class="column-title">Inventory Level </th>
